--- a/3_pandas_morning_exercise_I_solution.ipynb
+++ b/3_pandas_morning_exercise_I_solution.ipynb
@@ -3,17 +3,29 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "outputs": [],
    "source": [
     "import pandas as pd"
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Unzip imdb_pandas.zip into the data folder. "
+    "### Load CSV titles into Pandas DataFrame"
    ]
   },
   {
@@ -22,7 +34,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "titles = pd.read_csv('data/titles.csv')\n",
+    "titles = pd.read_csv('data/titles.csv', sep=',')\n",
     "titles.head()"
    ]
   },
@@ -31,8 +43,22 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "cast = pd.read_csv('data/cast.csv')\n",
+    "### Load CSV cast into Pandas DataFrame"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cast = pd.read_csv('data/cast.csv', sep=\",\")\n",
     "cast.head()"
    ]
   },
@@ -47,19 +73,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Using groupby(), count the number of films that have been released in each decade in the history of cinema."
+    "### How many movies are listed in the titles dataframe?"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "titles['decade'] = titles['year'] // 10 * 10\n",
-    "titles.groupby('decade').size()"
+    "titles.shape[0]"
    ]
   },
   {
@@ -73,18 +96,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Use groupby() count the number of \"Hamlet\" films made in each decade."
+    "### How many columns are in the cast dataframe?"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "titles[titles['title'] == 'Hamlet'].groupby('decade').size()"
+    "titles.shape[1]"
    ]
   },
   {
@@ -98,18 +119,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### How many leading (n=1) roles were available to actors, and how many to actresses, in each year of the 1950s?"
+    "### What are the types of columns in cast DataFrame?"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "cast[(cast['year'].between(1950,1959)) & (cast['n'] == 1)].groupby(['year','type']).size()"
+    "titles.dtypes"
    ]
   },
   {
@@ -123,19 +142,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### In the 1950s taken as a whole, how many total roles were available to actors, and how many to actresses, for each \"n\" number 1 through 5?"
+    "### Export first 100 rows of titles DataFrame into separate CSV file"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "cast[(cast['year'].between(1950,1959)) & (cast['n'] < 6)].groupby(['n','type']).size()"
+    "titles.head(100).to_csv('titles_exported.csv',index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -148,18 +172,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Use groupby() to determine how many roles are listed for each of the Pink Panther movies."
+    "### Export last 30 rows of cast DataFrame into separate CSV file"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "cast[cast['title'] == 'The Pink Panther'].groupby(['year'])[['n']].max()\n"
+    "cast.tail(30).to_csv('cast_exported.csv', index=False)"
    ]
   },
   {
@@ -170,54 +192,9 @@
    "source": []
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### List, in order by year, each of the films in which Frank Oz has played more than 1 role."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "cast[cast['name'] == 'Frank Oz'].groupby(['year', 'title']).size().to_frame('roles').query('roles > 1')"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### List each of the characters that Frank Oz has portrayed at least twice."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "cast[cast['name'] == 'Frank Oz'].groupby('character').size().to_frame('size').query('size > 1')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
    "outputs": [],
    "source": []
   }
