--- a/4_pandas_morning_exercise_II_solution.ipynb
+++ b/4_pandas_morning_exercise_II_solution.ipynb
@@ -15,13 +15,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Unzip imdb_pandas.zip into the data folder. "
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -49,22 +42,6 @@
    "source": [
     "cast = pd.read_csv('data/cast.csv', sep=\",\")\n",
     "cast.head()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### How many movies are listed in the titles dataframe?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "titles.shape[0]"
    ]
   },
   {
@@ -398,7 +375,7 @@
     "cast[\n",
     "    (cast['title'] == 'Sleuth')\n",
     " &  (cast['year'] == 1972)\n",
-    "].sort_values('n')\n"
+    "].sort_values('n')"
    ]
   },
   {
@@ -524,7 +501,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cast[cast['character'] == 'Ophelia'].name.nunique()"
+    "cast[cast['character'] == 'Ophelia']['name'].nunique()"
    ]
   },
   {
@@ -547,7 +524,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cast[cast['character'] == 'The Dude'].name.nunique()"
+    "cast[cast['character'] == 'The Dude']['name'].nunique()"
    ]
   },
   {
@@ -570,7 +547,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cast[cast['character'] == 'The Stranger'].name.nunique()"
+    "cast[cast['character'] == 'The Stranger']['name'].nunique()"
    ]
   },
   {
@@ -616,7 +593,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cast[cast['name'] == 'Judi Dench'].shape[0]"
+    "t[cast['name'] == 'Judi Dench'].shape[0]"
    ]
   },
   {
@@ -773,7 +750,7 @@
    "source": [
     "cast[\n",
     "    (cast['year'] <= 1980)\n",
-    "  & (cast['n'] != 1)\n",
+    "  & (cast['n'] == 1)\n",
     "].shape[0]"
    ]
   },
