--- a/5_pandas_afternoon_exercise_I_solution.ipynb
+++ b/5_pandas_afternoon_exercise_I_solution.ipynb
@@ -32,9 +32,23 @@
    },
    "outputs": [],
    "source": [
-    "titles = pd.read_csv('data/titles.csv', index_col=None)\n",
+    "titles = pd.read_csv('data/imdb_pandas/titles.csv', index_col=None)\n",
     "titles.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -47,8 +61,8 @@
    },
    "outputs": [],
    "source": [
-    "cast = pd.read_csv('data/cast.csv', index_col=None)\n",
-    "cast.head()"
+    "# cast = pd.read_csv('data/cast.csv', index_col=None)\n",
+    "# cast.head()"
    ]
   },
   {
@@ -61,9 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "titles['title'].value_counts().head(10)"
@@ -86,9 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "titles[titles['year'].between(1930,1939)]['year'].value_counts().head(3)"
@@ -111,9 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "(titles['year'] // 10 * 10).value_counts().sort_index()"
@@ -136,9 +144,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "t = titles[\n",
@@ -164,9 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "c = cast[cast['character'] == 'Rustler']\n",
@@ -190,9 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "c = cast[cast['character'] == 'Hamlet']\n",
@@ -216,9 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "cast['character'].value_counts().head(11)"
@@ -241,12 +241,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "cast[cast['character'] == 'Herself'].name.value_counts().head(10)"
+    "cast[cast['character'] == 'Herself']['name'].value_counts().head(10)"
    ]
   },
   {
@@ -266,12 +264,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "cast[cast['character'] == 'Himself'].name.value_counts().head(10)"
+    "cast[cast['character'] == 'Himself']['name'].value_counts().head(10)"
    ]
   },
   {
@@ -291,12 +287,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "cast[cast.year == 1945].name.value_counts().head(10)"
+    "cast[cast.year == 1945]['name'].value_counts().head(10)"
    ]
   },
   {
@@ -316,12 +310,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "cast[cast.year == 1985].name.value_counts().head(10)"
+    "cast[cast.year == 1985]['name'].value_counts().head(10)"
    ]
   },
   {
@@ -341,12 +333,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "cast[cast.name == 'Mammootty'].year.value_counts().sort_index()"
+    "cast[cast.name == 'Mammootty']['year'].value_counts().sort_index()"
    ]
   },
   {
@@ -366,9 +356,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "cast[cast['character'].str.startswith('Patron in ')]['character'].value_counts().head(10)"
@@ -391,9 +379,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "cast[cast['character'].str.startswith('Science')]['character'].value_counts().head(10)"
@@ -416,12 +402,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "cast[(cast['name'] == 'Judi Dench') & (cast.n.notnull())].sort_values('year').shape[0]\n"
+    "cast[(cast['name'] == 'Judi Dench') & (cast['n'].notnull())].sort_values('year').shape[0]"
    ]
   },
   {
@@ -446,7 +430,7 @@
    },
    "outputs": [],
    "source": [
-    "cast[(cast['name'] == 'Cary Grant') & (cast.n.notnull())].sort_values('year').shape[0]"
+    "cast[(cast['name'] == 'Cary Grant') & (cast['n'].notnull())].sort_values('year').shape[0]"
    ]
   },
   {
@@ -466,12 +450,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "cast[(cast['name'] == 'Sidney Poitier') & (cast.n.notnull())].sort_values('year').shape[0]"
+    "cast[(cast['name'] == 'Sidney Poitier') & (cast['n'].notnull())].sort_values('year').shape[0]"
    ]
   },
   {
@@ -491,9 +473,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "cast[(cast['year'].between(1950,1959)) & (cast['n'] == 1)]['type'].value_counts()"
@@ -516,12 +496,142 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cast[(cast['year'].between(1950,1959)) & (cast['n'] == 2)]['type'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "release_dates = pd.read_csv(\n",
+    "    'data/release_dates.csv', \n",
+    "    index_col = None,\n",
+    "    parse_dates = ['date'], \n",
+    "    infer_datetime_format = True\n",
+    ")\n",
+    "release_dates.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Count the number of movies with \"Christmas\" in their title for each month, that is released are the USA."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "cast[(cast['year'].between(1950,1959)) & (cast['n'] == 2)]['type'].value_counts()"
+    "release_dates[\n",
+    "    (release_dates['title'].str.contains('Christmas'))\n",
+    "  & (release_dates['country'] == 'USA')\n",
+    "]['date'].dt.month.value_counts().sort_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Merge"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### On which date was each Judi Dench movie from the 1990s released in the USA?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "cast[\n",
+    "    (cast['name'] == 'Judi Dench')\n",
+    "  & (cast['year'].between(1990, 1999))\n",
+    "].merge(release_dates[release_dates.country == 'USA'][['title', 'year','country']], on=['title','year'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### In which months do films with the actress Judi Dench tend to be released in the USA?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "cast[(cast['name'] == 'Judi Dench')].merge(release_dates[release_dates.country == 'USA'], on=['title','year'])['date'].dt.month.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### In which months do films with the actor Tom Cruise tend to be released in the USA?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "cast[(cast['name'] == 'Tom Cruise')].merge(release_dates[release_dates.country == 'USA'], on=['title','year'])['date'].dt.month.value_counts()"
    ]
   },
   {
